adiciona prettier e eslint
