# src/controllers/OcorrenciaController/GetAllOcorrenciaController.ts
@@ -1,12 +1,12 @@
-import { Request, Response } from "express";
-import { GetAllOcorrenciaService } from "../../services/OcorrenciaServices/GetAllOcorrenciaServices";
+import { Request, Response } from 'express'
+import { GetAllOcorrenciaService } from '../../services/OcorrenciaServices/GetAllOcorrenciaServices'
 
-export class GetAllOcorrenciaController{
-    async handle(request:Request,response:Response){
-        const service = new GetAllOcorrenciaService();
+export class GetAllOcorrenciaController {
+    async handle(request: Request, response: Response) {
+        const service = new GetAllOcorrenciaService()
 
-        const ocorrencias = await service.execute();
+        const ocorrencias = await service.execute()
 
-        return response.json(ocorrencias);
+        return response.json(ocorrencias)
     }
 }
